data/issues_nolabel/nolabel_test_16246.txt
Failed to build error: mismatched argument pack lenghts...

System information

OS Platform and Distribution (e.g., Linux Ubuntu 16.04): 4.14.13-1-ARCH
TensorFlow installed from (source or binary): git
Python version: 3.6.4
Bazel version (if compiling from source): 0.9.0-1
GCC/Compiler version (if compiling from source): 6.4.1
CUDA/cuDNN version:  9.1.85-1 / 7.0.5-2
Exact command to reproduce:
./configure
bazel build --config=opt --config=cuda --jobs 12 //tensorflow/tools/pip_package:build_pip_package

Describe the problem
failed to build
Source code / logs

/usr/lib/gcc/x86_64-pc-linux-gnu/6.4.1/include/c++/tuple:489:65: error: mismatched argument pack lengths while expanding 'std::is_convertible<_UElements&&, _Elements>'
return _and<is_convertible<_UElements&&, _Elements>...>::value;
^~~~~
/usr/lib/gcc/x86_64-pc-linux-gnu/6.4.1/include/c++/tuple:490:1: error: body of constexpr function 'static constexpr bool std::_TC<, _Elements>::_ImplicitlyMoveConvertibleTuple() [with _UElements = {const std::tuple<tensorflow::VariantBinaryOp, tensorflow::StringPiece, tensorflow::StringPiece>}; bool  = true; _Elements = {tensorflow::VariantBinaryOp, tensorflow::StringPiece, tensorflow::StringPiece}]' not a return-statement
}
^
ERROR: /home/user/dev/git/tensorflow/tensorflow/core/kernels/BUILD:1884:1: output 'tensorflow/core/kernels/_objs/list_kernels_gpu/tensorflow/core/kernels/list_kernels.cu.pic.o' was not created
ERROR: /home/user/dev/git/tensorflow/tensorflow/core/kernels/BUILD:1884:1: not all outputs were created or valid
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 29.727s, Critical Path: 28.35s
FAILED: Build did NOT complete successfully